# jarvis

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASYNCIO_REFACTORING.md  CHANGELOG.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  INSTALL.md  JARVIS.md  Jarvis Project Summary.html  PROJECT_VERIFICATION.md  QUICKREF.md  README.md  REBUILD_ASSESSMENT.md  SECURITY.md  SUMMARY.txt  TESTING.md  build.sh  config.toml.example  install.bat  install.sh  pyproject.toml  requirements.txt  run_jarvis.sh  setup.py  uninstall.bat  uninstall.sh
deployment/docker/: .dockerignore  Dockerfile  docker-compose.yml
deployment/systemd/: jarvis-server.service
docs/: API.md  COLORS.md  CONFIGURATION.md  DEPENDENCIES.md  DEPLOYMENT.md
scripts/: health-check.sh  install.sh
src/jarvis/: __init__.py  __main__.py  backup.py  client.py  client_adapter.py  config.py  connection_fsm.py  constants.py  contact.py  crypto.py  daemon_manager.py  discovery.py  errors.py  file_transfer.py  group.py  identity.py  init.py  main.py  matrix_backend.py  message.py  message_queue.py  metrics.py  nat_traversal.py  network.py  network_async.py  notification.py  protocol.py  qr_code.py  ratchet.py  rate_limiter.py  sanitization.py  search.py  security_manager.py  server.py  server_old_threading.py  session.py  ui.py  ui_components.py  ui_screens.py  utils.py  (+1 more)
tests/: __init__.py  conftest.py  init.py  test_connection_status.py  test_crypto.py  test_integration.py  test_network.py  test_p2p_connection.py  test_ui.py  verify_ui_interactions.py
tests/unit/: test_matrix_backend.py  test_utils.py
