[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-messenger"
version = "2.4.0"
description = "Terminal-based peer-to-peer end-to-end encrypted messenger with internet connectivity"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    {name = "orpheus497"}
]
keywords = ["messenger", "p2p", "encryption", "security", "privacy", "e2e", "terminal", "cli", "nat-traversal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "textual>=0.90.0",
    "cryptography>=44.0.0",
    "argon2-cffi>=23.1.0",
    "rich>=13.9.4",
    "pyperclip>=1.9.0",
    "tomli>=2.2.1; python_version < '3.11'",
    "zstandard>=0.23.0",
    "liboqs-python>=0.11.0",
    "qrcode>=8.0",
    "pillow>=10.0.0",
    "miniupnpc>=2.2.4",
    "pystun3>=1.0.0",
    "zeroconf>=0.131.0",
    "validators>=0.22.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
voice = [
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
]
qr = [
    "pyzbar>=0.1.9",
]
all = [
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
    "pyzbar>=0.1.9",
]

[project.urls]
"Homepage" = "https://github.com/orpheus497/jarvisapp"
"Bug Reports" = "https://github.com/orpheus497/jarvisapp/issues"
"Source" = "https://github.com/orpheus497/jarvisapp"
"Changelog" = "https://github.com/orpheus497/jarvisapp/blob/main/CHANGELOG.md"
"Documentation" = "https://github.com/orpheus497/jarvisapp/blob/main/README.md"

[project.scripts]
jarvis = "jarvis.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Black - Python code formatter
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff - Fast Python linter
[tool.ruff]
line-length = 100
target-version = "py38"

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from e (not always applicable)
    "SIM108", # use ternary operator (can reduce readability)
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"client_adapter.py" = ["F821", "RUF006"]  # Undefined logger, asyncio.create_task
"config.py" = ["E721"]  # Type comparisons for config parsing
"connection_fsm.py" = ["RUF012"]  # Mutable class attribute (TRANSITIONS dict)
"crypto.py" = ["RUF002"]  # Math symbol × in docstring
"daemon_manager.py" = ["N806", "SIM102"]  # Windows constants, nested if
"discovery.py" = ["RUF006", "B007"]  # Async task references, unused loop var
"nat_traversal.py" = ["RUF012"]  # Mutable class attribute
"network.py" = ["E722", "RUF006", "SIM102"]  # Bare except, async tasks, nested if
"qr_code.py" = ["E722", "F401"]  # Bare except, availability check imports
"server.py" = ["RUF006", "E722"]  # Async task references, bare except
"ui.py" = ["RUF012", "SIM102"]  # Mutable class attributes (Textual BINDINGS), nested if
"ui_components.py" = ["E722"]  # Bare except for robust date parsing
"ui_screens.py" = ["F841", "RUF012", "B007", "SIM102"]  # Unused vars, mutable attrs, nested if
"utils.py" = ["E722", "SIM103"]  # Bare except clauses
"voice.py" = ["RUF059"]  # Unpacked unused variable

[tool.ruff.lint.isort]
known-first-party = ["jarvis"]

# Mypy - Static type checker
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_error_context = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "textual.*",
    "cryptography.*",
    "argon2.*",
    "pyperclip.*",
    "zstandard.*",
    "liboqs.*",
    "qrcode.*",
    "PIL.*",
    "sounddevice.*",
    "soundfile.*",
    "miniupnpc.*",
    "pystun3.*",
    "zeroconf.*",
    "validators.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/jarvis"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
